vendor/ocaml/testsuite/tests/typing-short-paths/pr7543.ml.reference

# * * * *   module type S = sig type t end
# module N : sig type 'a t = 'a end
# val f : (module S with type t = unit) -> unit = <fun>
# Characters 19-20:
  let () = f (module N);;
                     ^
Error: Signature mismatch:
       Modules do not match:
         sig type 'a t = 'a end
       is not included in
         sig type t = N.t end
       Type declarations do not match:
         type 'a t = 'a
       is not included in
         type t = N.t
       They have different arities.
# 
